--- a/google.html
+++ b/google.html
@@ -66,9 +66,15 @@
               </div>
               <div id="search">
                 <form>
-                    <input></input>
-                    <button>Recherche Google</button>
-                    <button>J'ai de la chance</button>
+                    <div id="loupe"><i class="fas fa-search"></i></div>
+                    <div>
+                      <input></input>
+                    </div>
+                    <div id="mic"><i class="fas fa-microphone"></i></div>
+                  </div>
+                </div>
+                <button>Recherche Google</button>
+                <button>J'ai de la chance</button>
                 </form>
               </div>
               <div id="lang">
