--- a/index.html
+++ b/index.html
@@ -51,13 +51,8 @@
                 <a>connection</a>
               </div>
               <div id="logo">
-                <img src="">
-                <div id="br">
-                  <div id="loupe"><i class="fas fa-search"></i></div>
-                  <div>
-                    <input></input>
-                  </div>
-                  <div id="mic"><i class="fas fa-microphone"></i></div>
+              <div id="logo">
+                <img src="img/googlelogo.png" alt="Logo Google">  
                 </div>
               </div>
               <div id="search">
