--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               </div>
               <div id="logo">
               <div id="logo">
-                <img src="img/googlelogo.png" alt="Logo Google">  
+                <img src="/google.png" alt="Logo Google">  
                 </div>
               </div>
               <div id="search">
