--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
                 <a>connection</a>
               </div>
               <div id="logo">
-              <div id="logo">
-                <img src="google.png" alt="Logo Google">  
-                </div>
+                <img src="google.png" alt="Logo Google">  </div>
               </div>
               <div id="search">
                 <form>
