Push btn + footer
CSS boutons et début du job sur footer

--- a/index.html
+++ b/index.html
@@ -37,6 +37,28 @@
             border: 1px solid #c6c6c6;
             color: #222;
         }
+       
+/*Modifs btn Isa */       
+      #btn {
+        text-align: right;
+      }
+      #btn a {
+        text-decoration: none;
+      }
+      #btn a:hover {
+        opacity: .85;
+        text-decoration: underline;
+
+      #btn a: {
+      }
+
+/*Modifs footer Isa */
+      #footer {
+        background: #f2f2f2;
+        line-height: 40px;
+        min-width: 980px;
+        border-top: 1px solid #e4e4e4;
+      }
      </style>
  </head>
 
@@ -51,7 +73,9 @@
                 <a>connection</a>
               </div>
               <div id="logo">
-                <img src="google.png" alt="Logo Google">  </div>
+              <div id="logo">
+                <img src="google.png" alt="Logo Google">  
+                </div>
               </div>
               <div id="search">
                 <form>
@@ -72,6 +96,24 @@
          </div>
 
          <div id="footer">
+                     <div id="footer-1">
+            <span class="footer-1">France</span>
+          </div>
+          <span class="footer-2">
+            <a href="https://support.google.com/websearch/answer/9586983">Publication judiciaire</a>
+            <a href="https://support.google.com/websearch/answer/7585859">Info consommateurs</a>
+            <a href="https://policies.google.com/privacy?fg=1">Confidentialité</a>
+            <a href="https://policies.google.com/terms?fg=1">Conditions</a>
+          </span>
+          <span class="footer-3">
+            <a href="https://policies.google.com/preferences?hl=fr">Paramètres</a>
+          </span>
+          <span class="footer-3">
+            <a href="https://ads.google.com/intl/fr_fr/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2">Publicité</a>
+            <a href="https://support.google.com/websearch/answer/7585859">Entreprise</a>
+            <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2">A propos</a>
+            <a href="https://www.google.com/search/howsearchworks/?fg=1">Comment fonctionne la recherche Google?</a>
+          </span>
          </div>
      </div>
 
