--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 
 /*Modifs footer Isa */
       #footer {
+        position:absolute;bottom:0;
         background: #f2f2f2;
         line-height: 40px;
         min-width: 980px;
