--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
       #btn a: {
       }
 
-/*Modifs footer Isa */
+      /*Modifs footer Isa */
       #footer {
-        position:absolute;bottom:0;
+        position:absolute;
+        bottom:0;
         background: #f2f2f2;
         line-height: 40px;
         min-width: 980px;
@@ -97,7 +98,7 @@
          </div>
 
          <div id="footer">
-                     <div id="footer-1">
+           <div id="footer-1">
             <span class="footer-1">France</span>
           </div>
           <span class="footer-2">
