--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <a><i class="fas fa-th"></i></a>
                 <a>connection</a>
               </div>
-              <div id="logo">
+              <center>
               <div id="logo">
                 <img src="google.png" alt="Logo Google">  
                 </div>
@@ -95,6 +95,7 @@
               </div>
               <div id="lang">
               </div>
+    </cernter>
          </div>
 
          <div id="footer">
