--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
             color: rgba(0, 0, 0, 0.877);
             font-family: arial,sans-serif;
         }
-
+        /*boutton "Connexion" bleu*/
+        #connexion{
+          font-style: bold;
+          background-color:rgb(69, 132, 240);    
+          color: whitesmoke;
+          padding-left: 15px;
+          padding-right: 15px;
+          padding-top: 7px;
+          padding-bottom: 7px;
+          border-radius: 3px;
+        }
         button {
             background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
             background-color: #f2f2f2;
@@ -72,7 +82,7 @@
                 <a>Gmail</a>
                 <a>Image</a>
                 <a><i class="fas fa-th"></i></a>
-                <a>connection</a>
+                <a id=connexion>Connexion</a>
               </div>
               <center>
               <div id="logo">
