--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
             border: 1px solid #c6c6c6;
             color: #222;
         }
-       
+       #connecxion  {
+          box-shadow: 2px 2px 5px whitesmoke,
+          -2px 2px 5px whitesmoke,
+          2px -2px 5px whitesmoke,
+          -2px -2px 5px whitesmoke,
+       }
 /*Modifs btn Isa */       
       #btn {
         text-align: right;
@@ -82,7 +87,7 @@
                 <a>Gmail</a>
                 <a>Image</a>
                 <a><i class="fas fa-th"></i></a>
-                <a id=connexion>Connexion</a>
+                <a id="connexion">Connexion</a>
               </div>
               <center>
               <div id="logo">
