--- a/index.html
+++ b/index.html
@@ -61,11 +61,10 @@
         text-decoration: none;
       }
       #btn a:hover {
-        opacity: .85;
+        opacity: 0.85;
         text-decoration: underline;
+       }
 
-      #btn a: {
-      }
 
       /*Modifs footer Isa */
       #footer {
