--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               </div>
               <div id="lang">
               </div>
-    </cernter>
+            </center>
          </div>
 
          <div id="footer">
