--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             border: 1px solid #c6c6c6;
             color: #222;
         }
-       #connecxion:hover  {
+       #connexion:hover  {
           box-shadow: 2px 2px 5px whitesmoke,
           -2px 2px 5px whitesmoke,
           2px -2px 5px whitesmoke,
