--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
           padding-bottom: 7px;
           border-radius: 3px;
         }
+       #connexion:hover {
+          box-shadow:
+            2px 2px 5px whitesmoke,-2px 2px 5px whitesmoke,
+            2px -2px 5px whitesmoke, -2px -2px 5px whitesmoke
+      }
         button {
             background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
             background-color: #f2f2f2;
@@ -47,12 +52,7 @@
             border: 1px solid #c6c6c6;
             color: #222;
         }
-       #connexion:hover  {
-          box-shadow: 2px 2px 5px whitesmoke,
-          -2px 2px 5px whitesmoke,
-          2px -2px 5px whitesmoke,
-          -2px -2px 5px whitesmoke,
-       }
+       
 /*Modifs btn Isa */       
       #btn {
         text-align: right;
