--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
        #connexion:hover {
           box-shadow:
             2px 2px 5px whitesmoke,-2px 2px 5px whitesmoke,
-            2px -2px 5px whitesmoke, -2px -2px 5px whitesmoke
+            2px -2px 5px whitesmoke, -2px -2px 5px whitesmoke;
+            text-decoration: underline;
       }
         button {
             background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
