--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           box-shadow:
             2px 2px 5px whitesmoke,-2px 2px 5px whitesmoke,
             2px -2px 5px whitesmoke, -2px -2px 5px whitesmoke;
-            text-decoration: underline;
+            text-decoration: none;
       }
         button {
             background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
