--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           box-shadow:
             2px 2px 5px whitesmoke,-2px 2px 5px whitesmoke,
             2px -2px 5px whitesmoke, -2px -2px 5px whitesmoke;
-            text-decoration: none;
+            text-decoration: none!important;
       }
         button {
             background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
