--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         }
        #connexion:hover {
           box-shadow:
-            2px 2px 5px whitesmoke,-2px 2px 5px whitesmoke,
-            2px -2px 5px whitesmoke, -2px -2px 5px whitesmoke;
+            2px 2px 5px rgb(69, 132, 240),-2px 2px 5px rgb(69, 132, 240),
+            2px -2px 5px rgb(69, 132, 240), -2px -2px 5px rgb(69, 132, 240);
             text-decoration: none!important;
       }
         button {
