--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             2px -2px 5px rgb(69, 132, 240), -2px -2px 5px rgb(69, 132, 240);
             text-decoration: none!important;
       }
+       
+       #search {
+         text-aligne: center;
+       }
         button {
             background-image: -webkit-linear-gradient(top,#f5f5f5,#f1f1f1);
             background-color: #f2f2f2;
