--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://kit.fontawesome.com/d70a89f18c.js" crossorigin="anonymous"></script>
     <style>
         html {
+            height: 100%;
+            width: 100%;
             color: rgba(0, 0, 0, 0.877);
             font-family: arial, sans-serif;
         }
