--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             color: rgba(0, 0, 0, 0.877);
             font-family: arial, sans-serif;
         }
+        body {
+            margin: 0;
+            pading: 1%;
+        }
 
         /*Modifs Isa 
          btn top*/
