--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
         body {
             margin: 0;
-            pading: 1%;
+            padding: 5px 1% 0;
         }
 
         /*Modifs Isa 
