--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             line-height: 40px;
             min-width: 980px;
             border-top: 1px solid #e4e4e4;
+            width: 100%;/*JP*/
         }
     </style>
 </head>
