--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
             font-family: arial, sans-serif;
         }
         body {
-            margin: 0;
-            padding: 5px 1% 0;
+            margin: 5px;
         }
 
         /*Modifs Isa 
