--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             font-family: arial, sans-serif;
         }
         body {
-            margin: 5px;
+            margin: 0;
         }
 
         /*Modifs Isa 
