--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <div id="br">
                         <div style="clear: both;"></div>
                         <div id="loupe"><i class="fas fa-search"></i></div>
-                        <div>
+                        <div id="inp">
                             <input></input>
                         </div>
                         <div id="mic"><i class="fas fa-microphone"></i></div>
