--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             height: 100%;
             width: 100%;
             color: rgba(0, 0, 0, 0.877);
-            font-family: arial, sans-serif;
+            font-family: arial,sans-serif;
         }
         body {
             margin: 0;
@@ -94,6 +94,7 @@
         #inp {
             display: block;
             float: left;
+            border: none;
         }
         #br {
             width: max-content;
