--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
         #br {
             width: max-content;
         }
+        
+        #inp:hover {
+            box-shadow:
+                2px 2px 5px rgb(69, 132, 240), -2px 2px 5px rgb(69, 132, 240),
+                2px -2px 5px rgb(69, 132, 240), -2px -2px 5px rgb(69, 132, 240);
+            text-decoration: none !important;
+        }
     </style>
 </head>
 
