--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
         }
         #br {
             width: max-content;
+            border-radius: 10px;
         }
         
-        #inp:hover {
+        #br:hover {
             box-shadow:
                 2px 2px 5px rgb(69, 132, 240), -2px 2px 5px rgb(69, 132, 240),
                 2px -2px 5px rgb(69, 132, 240), -2px -2px 5px rgb(69, 132, 240);
