--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
             width: max-content;
             border-radius: 10px;
         }
+        input {
+            border: none
+        }
         
         #br:hover {
             box-shadow:
