--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         #br {
             width: max-content;
             border-radius: 10px;
+            border: solid 1px lightgray;
             padding: 0 5px
         }
         input {
