--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
         
         #br:hover {
             box-shadow:
-                2px 2px 5px rgb(69, 132, 240), -2px 2px 5px rgb(69, 132, 240),
-                2px -2px 5px rgb(69, 132, 240), -2px -2px 5px rgb(69, 132, 240);
+                2px 2px 5px lightgray, -2px 2px 5px lightgray,
+                2px -2px 5px lightgray, -2px -2px 5px lightgray;
             text-decoration: none !important;
         }
     </style>
