--- a/index.html
+++ b/index.html
@@ -112,6 +112,35 @@
                 2px -2px 5px lightgray, -2px -2px 5px lightgray;
             text-decoration: none !important;
         }
+        
+        #footer-main a:hover {
+            text-decoration: underline;
+        }
+
+        #footer-main a {
+            display: inline-block;
+            color: #5f6368;
+            text-decoration: none;
+        }
+
+        #footer-top-1 {
+            color: rgba(0,0,0,.54);
+        }
+
+        #footer-bottom {
+            border-top: 1px solid #e4e4e4;
+            width: 100%; 
+        }
+
+        #footer-left {
+            float: right;
+            white-space: nowrap;   
+        }
+        
+        #footer-right {
+            float: right;
+            white-space: nowrap;   
+        }
     </style>
 </head>
 
@@ -151,25 +180,27 @@
     </div>
 
     </div>
-    <div id="footer">
-        <div id="footer-1">
-            <span class="footer-1">France</span>
+    <div id="footer-main">
+        <div id="footer-top-1">
+            <span id="footer-top-2">France</span>
         </div>
-        <span class="footer-2">
-            <a href="https://support.google.com/websearch/answer/9586983">Publication judiciaire</a>
-            <a href="https://support.google.com/websearch/answer/7585859">Info consommateurs</a>
-            <a href="https://policies.google.com/privacy?fg=1">Confidentialité</a>
-            <a href="https://policies.google.com/terms?fg=1">Conditions</a>
-        </span>
-        <span class="footer-3">
-            <a href="https://policies.google.com/preferences?hl=fr">Paramètres</a>
-        </span>
-        <span class="footer-3">
-            <a href="https://ads.google.com/intl/fr_fr/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2">Publicité</a>
-            <a href="https://support.google.com/websearch/answer/7585859">Entreprise</a>
-            <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2">A propos</a>
-            <a href="https://www.google.com/search/howsearchworks/?fg=1">Comment fonctionne la recherche Google?</a>
-        </span>
+        <div id="footer-bottom">
+            <span id="footer-left-1">
+                <a href="https://support.google.com/websearch/answer/9586983">Publication judiciaire</a>
+                <a href="https://support.google.com/websearch/answer/7585859">Info consommateurs</a>
+                <a href="https://policies.google.com/privacy?fg=1">Confidentialité</a>
+                <a href="https://policies.google.com/terms?fg=1">Conditions</a>
+            </span>
+            <span id="footer-left-2">
+                <a href="https://policies.google.com/preferences?hl=fr">Paramètres</a>
+            </span>
+            <span id="footer-right">
+                <a href="https://ads.google.com/intl/fr_fr/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2">Publicité</a>
+                <a href="https://support.google.com/websearch/answer/7585859">Entreprise</a>
+                <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2">A propos</a>
+                <a href="https://www.google.com/search/howsearchworks/?fg=1">Comment fonctionne la recherche Google?</a>
+            </span>
+        </div>
     </div>
 
 </body>
