--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         }
 
         /*Modifs footer Isa */
-        #footer {
+        #footer-main {
             position: absolute;
             bottom: 0;
             background: #f2f2f2;
@@ -133,7 +133,7 @@
         }
 
         #footer-left {
-            float: right;
+            float: left;
             white-space: nowrap;   
         }
         
