--- a/index.html
+++ b/index.html
@@ -146,6 +146,15 @@
             float: right;
             white-space: nowrap;
         }
+
+        #ooter-top,
+        #footer-left a {
+        padding-left: 30px;
+        }
+
+        #footer-right a {
+        padding-right: 30px;
+        }
     </style>
 </head>
 
@@ -189,21 +198,23 @@
         <div id="footer-top-1">
             <span id="footer-top-2">France</span>
         </div>
+    <div id="footer-main">
+        <div id="footer-top-1">
+            <span id="footer-top">France</span>
+        </div>
         <div id="footer-bottom">
-            <span id="footer-left-1">
-                <a href="https://support.google.com/websearch/answer/9586983">Publication judiciaire</a>
-                <a href="https://support.google.com/websearch/answer/7585859">Info consommateurs</a>
-                <a href="https://policies.google.com/privacy?fg=1">Confidentialité</a>
-                <a href="https://policies.google.com/terms?fg=1">Conditions</a>
-            </span>
-            <span id="footer-left-2">
-                <a href="https://policies.google.com/preferences?hl=fr">Paramètres</a>
-            </span>
-            <span id="footer-right">
+            <span id="footer-left">
                 <a href="https://ads.google.com/intl/fr_fr/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2">Publicité</a>
                 <a href="https://support.google.com/websearch/answer/7585859">Entreprise</a>
                 <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2">A propos</a>
                 <a href="https://www.google.com/search/howsearchworks/?fg=1">Comment fonctionne la recherche Google?</a>
+                <a href="https://policies.google.com/preferences?hl=fr">Paramètres</a>
+            </span>
+            <span id="footer-right">
+                <a href="https://support.google.com/websearch/answer/9586983">Publication judiciaire</a>
+                <a href="https://support.google.com/websearch/answer/7585859">Info consommateurs</a>
+                <a href="https://policies.google.com/privacy?fg=1">Confidentialité</a>
+                <a href="https://policies.google.com/terms?fg=1">Conditions</a>
             </span>
         </div>
     </div>
