--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             white-space: nowrap;
         }
 
-        #ooter-top,
+        #footer-top,
         #footer-left a {
         padding-left: 27px;
         }
