--- a/Google/index.html
+++ b/Google/index.html
@@ -26,6 +26,7 @@
             position: absolute;
             right: 0;
             top: 24px;
+            margin: 0 15px;
         }
 
         #btn a {
@@ -59,6 +60,7 @@
 
         #logo {
             margin-top: 89px;
+            height: 233px;
         }
 
         button {
@@ -184,6 +186,22 @@
         #footer-right a {
         padding-right: 30px;
         }
+
+#flr {
+  clear: both;
+}
+
+        #btn div{
+          float: right;
+        }
+
+        .fas.fa-th:hover{
+          opacity: .55;
+        }
+
+        .fas.fa-th:hover{
+          opacity: .85;
+        }
     </style>
 </head>
 
@@ -192,19 +210,23 @@
 
         <div id="main">
             <div id="btn">
-                <a>Gmail</a>
-                <a>Image</a>
-                <a><i class="fas fa-th"></i></a>
-                <a id="connexion">Connexion</a>
+                <div style="padding-right: 15px;">
+                <div style="padding-left: 15px;"><a id="connexion">Connexion</a></div>
+                  <div><a><i class="fas fa-th"></i></a></div>
+              </div>
+                <div style="padding-right: 15px;">
+                  <div style="padding-left: 15px;"><a>Image</a></div>
+                  <div><a>Gmail</a></div>
+                </div>
             </div>
             <center>
                 <div id="logo">
-                    <img src="google.png" alt="Logo Google" style="padding: 190px 0 0;">
+                    <img src="google.png" alt="Logo Google" style="padding: 109px 0 0;">
                 </div>
-                <div id="search">
+                <div id="search" style="margin-top: -5px;">
                     <div style="width: max-content;">
                     <form>
-                        <div id="br" style="width: 582px; padding: 0 16px 0 16px">
+                        <div id="br" style="width: 550px; padding: 0 16px 0 16px">
                             <div style="clear: both;"></div>
                             <div id="loupe"><i class="fas fa-search"></i></div>
                             <div id="inp">
