--- a/Google/index.html
+++ b/Google/index.html
@@ -19,13 +19,18 @@
             margin: 0;
         }
 
+        a {
+          cursor: pointer;
+        }
+
         /*Modifs Isa 
          btn top*/
         #btn {
+            font-size: 13px;
             text-align: right;
             position: absolute;
             right: 0;
-            top: 24px;
+            top: 23px;
             margin: 0 15px;
         }
 
@@ -41,14 +46,11 @@
         /*Modifs Maël
         boutton "Connexion" bleu*/
         #connexion {
-            font-style: bold;
             background-color: rgb(69, 132, 240);
+            font-weight: bold;
             color: whitesmoke;
-            padding-left: 15px;
-            padding-right: 15px;
-            padding-top: 7px;
-            padding-bottom: 7px;
-            border-radius: 3px;
+            padding: 8px 13px 7px;
+            border-radius: 2px;
         }
 
         #connexion:hover {
@@ -97,8 +99,8 @@
             line-height: 40px;
             min-width: 980px;
             border-top: 1px solid #e4e4e4;
-            width: 100%;
-            /*JP*/
+            width: 100%;/*JP*/
+            font-size: 14px;
         }
         #inp {
             width: calc(100% - 45px);
@@ -109,7 +111,7 @@
             border: none;
         }
         #loupe {
-            margin: 13px 8px 12px 0;
+            margin: 13px 8px 14px 0;
             display: block;
             float: left;
             border: none;
@@ -159,13 +161,16 @@
             text-decoration: none;
         }
 
-        #footer-top-1 {
-            color: rgba(0, 0, 0, .54);
+        #footer-top {
+          font-size: 15px;
+          color: rgba(0,0,0,.54);
         }
 
         #footer-bottom {
+          font-size: 14px;
             border-top: 1px solid #e4e4e4;
-            width: 100%;
+            width: calc(100% - 7px);
+            margin-left: 7px;
         }
 
         #footer-left {
@@ -176,15 +181,16 @@
         #footer-right {
             float: right;
             white-space: nowrap;
+            margin-right: 30px;
         }
 
-        #ooter-top,
+        #footer-top {
+        padding-left: 15px;
+        }
+
+        #footer-right a,
         #footer-left a {
-        padding-left: 30px;
-        }
-
-        #footer-right a {
-        padding-right: 30px;
+        padding-left: 23px;
         }
 
 #flr {
@@ -193,15 +199,24 @@
 
         #btn div{
           float: right;
+          color: #000;
         }
 
-        .fas.fa-th:hover{
+        .fas.fa-th{
           opacity: .55;
         }
 
         .fas.fa-th:hover{
           opacity: .85;
         }
+
+        #covid {
+    font-size: small;
+    margin-bottom: 32px;
+        }
+        .neuf {
+          background-image: url('googleico.png');
+    background-size: 528px 251px;}
     </style>
 </head>
 
@@ -212,7 +227,7 @@
             <div id="btn">
                 <div style="padding-right: 15px;">
                 <div style="padding-left: 15px;"><a id="connexion">Connexion</a></div>
-                  <div><a><i class="fas fa-th"></i></a></div>
+                  <div><a class="neuf"></a></div>
               </div>
                 <div style="padding-right: 15px;">
                   <div style="padding-left: 15px;"><a>Image</a></div>
@@ -235,12 +250,22 @@
                             <div id="mic"><i class="fas fa-microphone"></i></div>
                             <div style="clear: both;"></div>
                         </div>
-                        <button>Recherche Google</button>
-                        <button>J'ai de la chance</button>
+                              <div style="clear: both;"></div>
+                            <div style="float: left;margin-top: 18px; width: 571px; padding-bottom: 13px;">
+                              <button>Recherche Google</button>
+                              <button>J'ai de la chance</button>
+                            </div>
+                              <div style="clear: both;"></div>
                     </form>
                     </div>
                 </div>
-                <div id="lang">
+                <div id="covid" style="height: 45px;">
+                  <img src="dothefive_90x90t.gif" style="width: 45px; margin: 0 5px 0 0;">
+                  <a href="https://www.google.fr/search?q=coronavirus+conseils&fbx=dothefive&hl=fr" style="vertical-align: middle;">5 GESTES "BARRIÈRE" pour freiner le coronavirus</a>
+                </div>
+                <div id="lang" style="font-size: small;isplay: inline-block;
+                line-height: 28px;">
+                  Google disponible en : <a style="padding: 0 3px;" href="https://www.google.com/">English</a>
                 </div>
             </center>
         </div>
@@ -248,7 +273,7 @@
 
     </div>
     <div id="footer-main">
-        <div id="footer-top-1">
+        <div id="footer-top">
             <span id="footer-top">France</span>
         </div>
         <div id="footer-bottom">
@@ -256,14 +281,14 @@
                 <a href="https://ads.google.com/intl/fr_fr/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2">Publicité</a>
                 <a href="https://support.google.com/websearch/answer/7585859">Entreprise</a>
                 <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2">A propos</a>
-                <a href="https://www.google.com/search/howsearchworks/?fg=1">Comment fonctionne la recherche Google?</a>
-                <a href="https://policies.google.com/preferences?hl=fr">Paramètres</a>
+                <a href="https://www.google.com/search/howsearchworks/?fg=1">Comment fonctionne la recherche Google ?</a>
             </span>
             <span id="footer-right">
                 <a href="https://support.google.com/websearch/answer/9586983">Publication judiciaire</a>
                 <a href="https://support.google.com/websearch/answer/7585859">Info consommateurs</a>
                 <a href="https://policies.google.com/privacy?fg=1">Confidentialité</a>
                 <a href="https://policies.google.com/terms?fg=1">Conditions</a>
+                <a href="https://policies.google.com/preferences?hl=fr">Paramètres</a>
             </span>
         </div>
     </div>
