--- a/Google/index.html
+++ b/Google/index.html
@@ -2,296 +2,310 @@
 <html lang="fr-FR">
 
 <head>
-    <title>Notre Google</title>
-    <meta charset="utf-8">
-    <link href="https://images.google.com/images/branding/googleg/1x/googleg_standard_color_128dp.png"
-        rel="shortcut icon">
-    <script src="https://kit.fontawesome.com/d70a89f18c.js" crossorigin="anonymous"></script>
-    <style>
-        html {
-            height: 100%;
-            width: 100%;
-            color: rgba(0, 0, 0, 0.877);
-            font-family: arial, sans-serif;min-width: 1139px;
-        }
+  <title>Notre Google</title>
+  <meta charset="utf-8">
+  <link href="https://images.google.com/images/branding/googleg/1x/googleg_standard_color_128dp.png"
+    rel="shortcut icon">
+  <script src="https://kit.fontawesome.com/d70a89f18c.js" crossorigin="anonymous"></script>
+  <style>
+    html {
+      height: 100%;
+      width: 100%;
+      color: rgba(0, 0, 0, 0.877);
+      font-family: arial, sans-serif;
+      min-width: 1139px;
+    }
 
-        body {
-            margin: 0;
-        }
+    body {
+      margin: 0;
+    }
 
-        a {
-          cursor: pointer;
-        }
+    a {
+      cursor: pointer;
+    }
 
-        /*Modifs Isa 
+    /*Modifs Isa 
          btn top*/
-        #btn {
-            font-size: 13px;
-            text-align: right;
-            position: absolute;
-            right: 0;
-            top: 23px;
-            margin: 0 15px;
-        }
+    #btn {
+      font-size: 13px;
+      text-align: right;
+      position: absolute;
+      right: 0;
+      top: 16px;
+      margin: 0 15px;
+    }
 
-        #btn a {
-            text-decoration: none;
-        }
+    #btn a {
+      text-decoration: none;
+      white-space: nowrap;
+    }
 
-        #btn a:hover {
-            opacity: 0.85;
-            text-decoration: underline;
-        }
+    #btn a:hover {
+      opacity: 0.85;
+      text-decoration: underline;
+    }
 
-        /*Modifs Maël
+    /*Modifs Maël
         boutton "Connexion" bleu*/
-        #connexion {
-            background-color: rgb(69, 132, 240);
-            font-weight: bold;
-            color: whitesmoke;
-            padding: 8px 13px 7px;
-            border-radius: 2px;
-        }
+    #connexion {
+      background-color: #4285f4;
+      font-weight: bold;
+      color: whitesmoke;
+      padding: 8px 13px 7px;
+      border-radius: 2px;
+    }
 
-        #connexion:hover {
-            box-shadow:
-                2px 2px 5px rgb(69, 132, 240), -2px 2px 5px rgb(69, 132, 240),
-                2px -2px 5px rgb(69, 132, 240), -2px -2px 5px rgb(69, 132, 240);
-            text-decoration: none !important;
-        }
+    #connexion:hover {
+      box-shadow: 0px 1px 1px #4285f4;
+      text-decoration: none !important;
+      opacity: 1 !important;
+    }
 
-        #logo {
-            margin-top: 89px;
-            height: 233px;
-        }
+    #logo {
+      margin-top: 89px;
+      height: 233px;
+    }
 
-        button {
-            background-image: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1);
-            background-color: #f2f2f2;
-            border: 1px solid #f2f2f2;
-            border-radius: 4px;
-            color: #5F6368;
-            font-family: arial, sans-serif;
-            font-size: 14px;
-            margin: 11px 4px;
-            padding: 0 16px;
-            line-height: 27px;
-            height: 36px;
-            min-width: 54px;
-            text-align: center;
-            cursor: pointer;
-            user-select: none;
-        }
+    button {
+      background-image: -webkit-linear-gradient(top, #f5f5f5, #f1f1f1);
+      background-color: #f2f2f2;
+      border: 1px solid #f2f2f2;
+      border-radius: 4px;
+      color: #5F6368;
+      font-family: arial, sans-serif;
+      font-size: 14px;
+      margin: 11px 4px;
+      padding: 0 16px;
+      line-height: 27px;
+      height: 36px;
+      min-width: 54px;
+      text-align: center;
+      cursor: pointer;
+      user-select: none;
+    }
 
-        button:hover {
-            box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-            background-image: -webkit-linear-gradient(top, #f8f8f8, #f1f1f1);
-            background-color: #f8f8f8;
-            border: 1px solid #c6c6c6;
-            color: #222;
-        }
+    button:hover {
+      box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+      background-image: -webkit-linear-gradient(top, #f8f8f8, #f1f1f1);
+      background-color: #f8f8f8;
+      border: 1px solid #c6c6c6;
+      color: #222;
+    }
 
-        /*Modifs footer Isa */
-        #footer-main {
-            position: absolute;
-            bottom: 0;
-            background: #f2f2f2;
-            line-height: 40px;
-            min-width: 980px;
-            border-top: 1px solid #e4e4e4;
-            width: 100%;/*JP*/
-            font-size: 14px;
-        }
-        #inp {
-            width: calc(100% - 45px);
-            height: calc(100% - 37px);
-            display: flex;
-            flex: 100%;
-            float: left;
-            border: none;
-        }
-        #loupe {
-            margin: 13px 8px 14px 0;
-            display: block;
-            float: left;
-            border: none;
-            vertical-align:middle;
-        }
-        #mic {
-            margin:9px 0;
-            font-size: 19px;
-            display: block;
-            float: right;
-            border: none;
-            vertical-align:middle;
-        }
+    /*Modifs footer Isa */
+    #footer-main {
+      position: absolute;
+      bottom: 0;
+      background: #f2f2f2;
+      line-height: 40px;
+      min-width: 980px;
+      border-top: 1px solid #e4e4e4;
+      width: 100%;
+      /*JP*/
+      font-size: 14px;
+    }
 
-        #br {
-            width: max-content;
-            border-radius: 24px;
-            border: solid 1px lightgray;
-            padding: 0 5px
-        }
+    #inp {
+      width: calc(100% - 45px);
+      height: calc(100% - 37px);
+      display: flex;
+      flex: 100%;
+      float: left;
+      border: none;
+    }
 
-        input:focus {
-            outline:none;
-        }
+    #loupe {
+      margin: 13px 8px 14px 0;
+      display: block;
+      float: left;
+      border: none;
+      vertical-align: middle;
+    }
 
-        input {
-            width: 100%;
-            border: none;
-            font-size: 16px;
-            margin: 5px 0;
-            padding: 7px 0;
-        }
+    #mic {
+      margin: 9px 0;
+      font-size: 19px;
+      display: block;
+      float: right;
+      border: none;
+      vertical-align: middle;
+    }
 
-        #br:hover {
-            box-shadow:0 1px 6px 0 rgba(32,33,36,0.28);
-            border-color: rgba(223,225,229,0);
-            text-decoration: none !important;
-        }
+    #br {
+      width: max-content;
+      border-radius: 24px;
+      border: solid 1px lightgray;
+      padding: 0 5px
+    }
 
-        #footer-main a:hover {
-            text-decoration: underline;
-        }
+    input:focus {
+      outline: none;
+    }
 
-        #footer-main a {
-            display: inline-block;
-            color: #5f6368;
-            text-decoration: none;
-        }
+    input {
+      width: 100%;
+      border: none;
+      font-size: 16px;
+      margin: 5px 0;
+      padding: 7px 0;
+    }
 
-        #footer-top {
-          font-size: 15px;
-          color: rgba(0,0,0,.54);
-        }
+    #br:hover {
+      box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
+      border-color: rgba(223, 225, 229, 0);
+      text-decoration: none !important;
+    }
 
-        #footer-bottom {
-          font-size: 14px;
-            border-top: 1px solid #e4e4e4;
-            width: calc(100% - 7px);
-            margin-left: 7px;
-        }
+    #footer-main a:hover {
+      text-decoration: underline;
+    }
 
-        #footer-left {
-            float: left;
-            white-space: nowrap;
-        }
+    #footer-main a {
+      display: inline-block;
+      color: #5f6368;
+      text-decoration: none;
+    }
 
-        #footer-right {
-            float: right;
-            white-space: nowrap;
-            margin-right: 30px;
-        }
+    #footer-top {
+      font-size: 15px;
+      color: rgba(0, 0, 0, .54);
+    }
 
-        #footer-top {
-        padding-left: 15px;
-        }
+    #footer-bottom {
+      font-size: 14px;
+      border-top: 1px solid #e4e4e4;
+      width: calc(100% - 7px);
+      margin-left: 7px;
+    }
 
-        #footer-right a,
-        #footer-left a {
-        padding-left: 23px;
-        }
+    #footer-left {
+      float: left;
+      white-space: nowrap;
+    }
 
-#flr {
-  clear: both;
-}
+    #footer-right {
+      float: right;
+      white-space: nowrap;
+      margin-right: 30px;
+    }
 
-        #btn div{
-          float: right;
-          color: #000;
-        }
+    #footer-top {
+      padding-left: 15px;
+    }
 
-        .fas.fa-th{
-          opacity: .55;
-        }
+    #footer-right a,
+    #footer-left a {
+      padding-left: 23px;
+    }
 
-        .fas.fa-th:hover{
-          opacity: .85;
-        }
+    #flr {
+      clear: both;
+    }
 
-        #covid {
-    font-size: small;
-    margin-bottom: 32px;
-        }
-        .neuf {
-          background-image: url('googleico.png');
-    background-size: 528px 251px;}
-    </style>
+    #btn div {
+      float: right;
+      color: #000;
+    }
+
+    .fas.fa-th {
+      opacity: .55;
+    }
+
+    .fas.fa-th:hover {
+      opacity: .85;
+    }
+
+    #covid {
+      font-size: small;
+      margin-bottom: 32px;
+    }
+
+    .neuf {
+      background-image: url('googleico.png');
+      background-size: 528px 68px;
+      box-sizing: border-box;
+      background-position: -132px -38px;
+      opacity: .55;
+      height: 30px;
+      width: 30px;
+      display: block;
+    }
+  </style>
 </head>
 
 <body>
-    <div id="body">
+  <div id="body">
 
-        <div id="main">
-            <div id="btn">
-                <div style="padding-right: 15px;">
-                <div style="padding-left: 15px;"><a id="connexion">Connexion</a></div>
-                  <div><a class="neuf"></a></div>
+    <div id="main">
+      <div id="btn">
+        <div style="padding-right: 15px;">
+          <div style="padding-left: 15px;padding-top: 7px;"><a id="connexion">Connexion</a></div>
+          <div><a class="neuf"></a></div>
+        </div>
+        <div style="padding-right: 15px;">
+          <div style="padding-left: 15px;padding-top: 7px;"><a>Images</a></div>
+          <div style="padding-top: 7px;"><a>Gmail</a></div>
+        </div>
+      </div>
+      <center>
+        <div id="logo">
+          <img src="google.png" alt="Logo Google" style="padding: 109px 0 0;">
+        </div>
+        <div id="search" style="margin-top: -5px;">
+          <div style="width: max-content;">
+            <form>
+              <div id="br" style="width: 550px; padding: 0 16px 0 16px">
+                <div style="clear: both;"></div>
+                <div id="loupe"><i class="fas fa-search"></i></div>
+                <div id="inp">
+                  <input></input>
+                </div>
+                <div id="mic"><i class="fas fa-microphone"></i></div>
+                <div style="clear: both;"></div>
               </div>
-                <div style="padding-right: 15px;">
-                  <div style="padding-left: 15px;"><a>Image</a></div>
-                  <div><a>Gmail</a></div>
-                </div>
-            </div>
-            <center>
-                <div id="logo">
-                    <img src="google.png" alt="Logo Google" style="padding: 109px 0 0;">
-                </div>
-                <div id="search" style="margin-top: -5px;">
-                    <div style="width: max-content;">
-                    <form>
-                        <div id="br" style="width: 550px; padding: 0 16px 0 16px">
-                            <div style="clear: both;"></div>
-                            <div id="loupe"><i class="fas fa-search"></i></div>
-                            <div id="inp">
-                                <input></input>
-                            </div>
-                            <div id="mic"><i class="fas fa-microphone"></i></div>
-                            <div style="clear: both;"></div>
-                        </div>
-                              <div style="clear: both;"></div>
-                            <div style="float: left;margin-top: 18px; width: 571px; padding-bottom: 13px;">
-                              <button>Recherche Google</button>
-                              <button>J'ai de la chance</button>
-                            </div>
-                              <div style="clear: both;"></div>
-                    </form>
-                    </div>
-                </div>
-                <div id="covid" style="height: 45px;">
-                  <img src="dothefive_90x90t.gif" style="width: 45px; margin: 0 5px 0 0;">
-                  <a href="https://www.google.fr/search?q=coronavirus+conseils&fbx=dothefive&hl=fr" style="vertical-align: middle;">5 GESTES "BARRIÈRE" pour freiner le coronavirus</a>
-                </div>
-                <div id="lang" style="font-size: small;isplay: inline-block;
+              <div style="clear: both;"></div>
+              <div style="float: left;margin-top: 18px; width: 571px; padding-bottom: 13px;">
+                <button>Recherche Google</button>
+                <button>J'ai de la chance</button>
+              </div>
+              <div style="clear: both;"></div>
+            </form>
+          </div>
+        </div>
+        <div id="covid" style="height: 45px;">
+          <img src="dothefive_90x90t.gif" style="width: 45px; margin: 0 5px 0 0;">
+          <a href="https://www.google.fr/search?q=coronavirus+conseils&fbx=dothefive&hl=fr"
+            style="vertical-align: middle;">5 GESTES "BARRIÈRE" pour freiner le coronavirus</a>
+        </div>
+        <div id="lang" style="font-size: small;display: inline-block;
                 line-height: 28px;">
-                  Google disponible en : <a style="padding: 0 3px;" href="https://www.google.com/">English</a>
-                </div>
-            </center>
+          Google disponible en : <a style="padding: 0 3px;" href="https://www.google.com/">English</a>
         </div>
+      </center>
     </div>
+  </div>
 
+  </div>
+  <div id="footer-main">
+    <div id="footer-top">
+      <span id="footer-top">France</span>
     </div>
-    <div id="footer-main">
-        <div id="footer-top">
-            <span id="footer-top">France</span>
-        </div>
-        <div id="footer-bottom">
-            <span id="footer-left">
-                <a href="https://ads.google.com/intl/fr_fr/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2">Publicité</a>
-                <a href="https://support.google.com/websearch/answer/7585859">Entreprise</a>
-                <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2">A propos</a>
-                <a href="https://www.google.com/search/howsearchworks/?fg=1">Comment fonctionne la recherche Google ?</a>
-            </span>
-            <span id="footer-right">
-                <a href="https://support.google.com/websearch/answer/9586983">Publication judiciaire</a>
-                <a href="https://support.google.com/websearch/answer/7585859">Info consommateurs</a>
-                <a href="https://policies.google.com/privacy?fg=1">Confidentialité</a>
-                <a href="https://policies.google.com/terms?fg=1">Conditions</a>
-                <a href="https://policies.google.com/preferences?hl=fr">Paramètres</a>
-            </span>
-        </div>
+    <div id="footer-bottom">
+      <span id="footer-left">
+        <a href="https://ads.google.com/intl/fr_fr/home/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2">Publicité</a>
+        <a href="https://support.google.com/websearch/answer/7585859">Entreprise</a>
+        <a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2">A propos</a>
+        <a href="https://www.google.com/search/howsearchworks/?fg=1">Comment fonctionne la recherche Google ?</a>
+      </span>
+      <span id="footer-right">
+        <a href="https://support.google.com/websearch/answer/9586983">Publication judiciaire</a>
+        <a href="https://support.google.com/websearch/answer/7585859">Info consommateurs</a>
+        <a href="https://policies.google.com/privacy?fg=1">Confidentialité</a>
+        <a href="https://policies.google.com/terms?fg=1">Conditions</a>
+        <a href="https://policies.google.com/preferences?hl=fr">Paramètres</a>
+      </span>
     </div>
+  </div>
 
 </body>
 
