Modifs de qqes href sur google/index

--- a/google/index.html
+++ b/google/index.html
@@ -257,8 +257,8 @@
           <div><a onclick="cool()" class="neuf"></a></div>
         </div>
         <div style="padding-right: 15px;">
-          <div style="padding-left: 15px;padding-top: 7px;"><a href="https://www.google.fr/imghp?hl=fr&tab=wi&authuser=0&ogbl">Images</a></div>
-          <div style="padding-top: 7px;"><a href="https://mail.google.com/mail/u/0/?tab=wm&ogbl>Gmail</a></div>
+          <div style="padding-left: 15px;padding-top: 7px;"><a>Images</a></div>
+          <div style="padding-top: 7px;"><a href="https://www.google.fr/imghp?hl=fr&tab=wi&authuser=0&ogbl">Gmail</a></div>
         </div>
       </div>
       <div id="app"
