--- a/google/index.html
+++ b/google/index.html
@@ -258,7 +258,7 @@
         </div>
         <div style="padding-right: 15px;">
           <div style="padding-left: 15px;padding-top: 7px;"><a href="https://www.google.fr/imghp?hl=fr&tab=wi&authuser=0&ogbl">Images</a></div>
-          <div style="padding-top: 7px;"><a href="https://mail.google.com/mail/u/0/?tab=wm&ogbl>Gmail</a></div>
+          <div style="padding-top: 7px;"><a href="https://mail.google.com/mail/u/0/?tab=wm&ogbl">Gmail</a></div>
         </div>
       </div>
       <div id="app"
