--- a/google/index.html
+++ b/google/index.html
@@ -116,7 +116,6 @@
 
     #inp {
       width: calc(100% - 45px);
-      height: calc(100% - 37px);
       display: flex;
       flex: 100%;
       float: left;
@@ -262,7 +261,8 @@
         </div>
       </div>
       <div id="app"
-        style="overflow: hidden; top: 0px; width: 340px; z-index: 991; position: absolute; height: 468px; margin-top: 56px; max-height: calc(-56px + 100vh); right: 0px; margin-right: 27px; transition: height 0.3s ease-in-out 0s; visibility: hidden;">
+        style="overflow: hidden; top: 0px; width: 340px; z-index: 991; position: absolute; height: 468px; margin-top: 56px;
+        max-height: calc(-56px + 100vh); right: 0px; margin-right: 27px; transition: height 0.3s ease-in-out 0s; visibility: hidden;">
         <iframe id="app2" ng-non-bindable="" frameborder="0" hspace="0" marginheight="0" marginwidth="0" scrolling="no"
           tabindex="0" vspace="0" width="100%" role="presentation" id="I0_1585614304087" name="I0_1585614304087"
           src="https://ogs.google.fr/u/0/widget/app?origin=https%3A%2F%2Fwww.google.fr&pid=1&spid=1&hl=fr&gm=&usegapi=1#id=I0_1585614304087&_gfid=I0_1585614304087&parent=https%3A%2F%2Fwww.google.fr&pfname=&rpctoken=40980021&jsh=m%3B%2F_%2Fscs%2Fabc-static%2F_%2Fjs%2Fk%3Dgapi.gapi.en.OfYsKuVZ3qI.O%2Fd%3D1%2Fct%3Dzgms%2Frs%3DAHpOoo8UDq_6isr1vipw5cUlPTPPdx3_0A%2Fm%3D__features__"
