--- a/google/index.html
+++ b/google/index.html
@@ -115,7 +115,7 @@
     }
 
     #inp {
-      width: calc(100% - 45px);
+      width: calc(100% - 52px);
       display: flex;
       flex: 100%;
       float: left;
@@ -123,14 +123,14 @@
     }
 
     #loupe {
-      margin: 13px 8px 14px 0;
+      margin: 13px 8px 13px 0;
       display: block;
       float: left;
       border: none;
     }
 
     #mic {
-      margin: 10px 5px 9px 0;
+    margin: 10px 0 9px 5px;
       font-size: 19px;
       display: block;
       float: right;
@@ -271,7 +271,7 @@
         <div id="logo">
           <img src="google.png" alt="Logo Google" style="padding: 109px 0 0;">
         </div>
-        <div id="search" style="margin-top: -5px;">
+        <div id="search" style="margin-top:-5px;">
           <div style="width: max-content;">
             <form>
               <div id="br" style="width: 550px; padding: 0 16px 0 16px">
@@ -280,7 +280,16 @@
                 <div id="inp">
                   <input></input>
                 </div>
-                <div id="mic"><i class="fas fa-microphone"></i></div>
+                <script>
+                function attribuerFocus()
+                {
+                document.getElementById(inp).focus();
+                }
+                </script>
+                <div id="mic"><img src="micgoogle.png" style="width: 24px;">
+                  <!--<i class="fas fa-microphone"></i>
+                  alternative avec Fa-->
+                  </div>
                 <div style="clear: both;"></div>
               </div>
               <div style="clear: both;"></div>
