--- a/google/index.html
+++ b/google/index.html
@@ -312,7 +312,7 @@
           </div>
         </div>
         <div id="covid" style="height: 45px;">
-          <img src="dothefive_90x90t.gif" style="width: 45px; margin: 0 5px 0 0;">
+          <img src="dothefive_90x90t.gif" style="width: 45px; margin: 0 5px 0 0;vertical-align: middle;">
           <a href="https://www.google.fr/search?q=coronavirus+conseils&fbx=dothefive&hl=fr"
             style="vertical-align: middle;">5 GESTES "BARRIÈRE" pour freiner le coronavirus</a>
         </div>
